Made mat panel header height auto so that long titles no longer overflow

--- a/src/app/content/user-dashboard/activity-log/user-sales/user-sales-confirmed/user-sales-confirmed.component.css
+++ b/src/app/content/user-dashboard/activity-log/user-sales/user-sales-confirmed/user-sales-confirmed.component.css
@@ -29,3 +29,7 @@
   position: absolute;
   right: 50px
 }
+
+.product-title {
+  width: 70%;
+}
